# we-forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCS-KO.md  LICENSE  README.md  WSL-SETUP.md  crontab.example  install.ps1  install.sh  verify.sh
.github/workflows/: release.yml
agents/: memory-manager.md  monitor-sentinel.md  notifier.md  pattern-detector.md  quality-auditor.md  skill-finder.md  skill-synthesizer.md  we-forge.md
commands/: ask-codex.md  ask-gemini.md  dashboard.md  find-skill.md  ping-forge.md  skill-report.md  watch-and-learn.md
dashboard/: dashboard.py
harness/core/docs/: constitution.md  core-beliefs.md  git-conventions.md  governance.md  index.md  repository-architecture.md  repository-reliability.md  repository-security.md
harness/core/roles/: coder.md  pm.md  security-reviewer.md  tester.md
harness/core/templates/: plan-template.md  report-template.md  tracker-template.md
harness/core/workflows/: checkpoints.md  pipeline.md
harness/docs/: agents.md  index.md
harness/plans/: tracker.md
harness/plans/ongoing/: EP-PARITY-002.md
harness/scripts/: git_checkpoint.py  validate_harness.py
home/.claude/: CLAUDE.md
hooks/: sessionstart-we-forge.sh  stop-telemetry.sh
launchd/: com.we-forge-tick.plist.template
learning/: backfill_ecc_match.py  build-skill-index.sh  build_ecc_index.py  migrate-memory.sh  normalize.py  redact.sh  sequence_normalize.py  settings.snippet.json  skill-description-overrides.json  skill-suggest-regressions.json  tick.sh
learning/tests/: test_tokenize.py
ops/: README.md  com.we-forge.supervisor.plist  supervisor.sh
rust/: Cargo.toml  README.md
rust/src/: cli.rs  core.rs  daemon.rs  main.rs  service.rs  tui.rs
rust/src/cli/: audit.rs  dashboard.rs  doctor.rs  ecc.rs  ecc_quality.rs  install.rs  lifecycle.rs  logs.rs  notify_test.rs  ping.rs  session_util.rs  sessions.rs  set_interval.rs  set_workflow_suggest.rs  skill_hits.rs  skill_regressions.rs  skill_suggest.rs  status.rs  synonym_candidates.rs  synonym_coverage.rs  uninstall.rs
rust/src/cli/skill_suggest/: logging.rs  mod.rs  rank.rs  synonym_telemetry.rs  tokenize.rs  workflow.rs
scripts/: verify-skill-suggest.sh  we-forgectl
systemd/: README.md  we-forge-tick.service.template  we-forge-tick.timer.template
